# Remote-Control

./: .gitignore
Cpp/: CMakeLists.txt  notes.txt  readme.txt
Cpp/RemoteControl/: CMakeLists.txt
Cpp/RemoteControl/src/: ChannelManagerBase.h  IProviderBase.h  IServoProvider.h  RemoteControlServer.h  ServoProviderDummy.cpp  ServoProviderDummy.h
Cpp/RemoteControlProtocol/: CMakeLists.txt  Exception.h  RcpSocket.cpp  RcpSocket.h  random_access_queue.h
Cpp/RemoteControlProtocol/src/: Packet.cpp  Packet.h  RCPSocket.cpp  RCPSocket.h  RcpPacket.cpp  RcpPacket.h  RcpSocket.cpp  RcpSocket.h  random_access_queue.h
Cpp/RemoteControlServer/: CMakeLists.txt  ChannelAdapterServo.cpp  ChannelAdapterServo.h  ChannelManagerBase.h  ChannelManagerServo.cpp  ChannelManagerServo.h  IProviderBase.h  IServoProvider.h  Message.cpp  Message.h  RemoteControlServer.cpp  RemoteControlServer.h  Serializer.cpp  Serializer.h  ServoProviderDummy.cpp  ServoProviderDummy.h  TEST_RemoteControlServer.cpp  TEST_RemoteControlServer.h
Cpp/Server/: CMakeLists.txt  main.cpp
Cpp/Server/src/: main.cpp
Cpp/ServoDriver/: CMakeLists.txt
Cpp/Test/: Barrier.h  CMakeLists.txt  RcpBenchmark.cpp  RcpTest.cpp  RcsTest.cpp  ThreadEnqueue.h  main.cpp  tests.h
Cpp/Test/src/: RcpBenchmark.cpp  RcpTest.cpp  main.cpp  tests.h
Doc/: notes.txt  project.txt  use_cases.txt
Doc/Modeling/: notes.txt
Doc/Modeling/model/: model.modelproj  model.sln
Modeling/: notes.txt
Modeling/model/: core_activities.usecasediagram  core_activities.usecasediagram.layout
Modeling/model/ModelDefinition/: model.uml
